<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".score.GameActivity">

    <RelativeLayout
        android:id="@+id/rl_boom"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_title_boom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/text_boom_number">
        </TextView>

        <TextView
            android:id="@+id/tv_boom_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/tv_title_boom"
            android:gravity="center"
            android:text="0"
            android:textSize="18sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_spring"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_title_spring"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/text_weather_spring">
        </TextView>

        <TextView
            android:id="@+id/tv_spring"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/tv_title_spring"
            android:gravity="center"
            android:text="@string/text_no"
            android:textSize="18sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_landlord"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_title_landlord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/text_landlord_player">
        </TextView>

        <TextView
            android:id="@+id/tv_landlord"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/tv_title_landlord"
            android:gravity="center"
            android:textSize="18sp">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_winner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_title_winner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/text_win_player">
        </TextView>

        <TextView
            android:id="@+id/tv_winner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@+id/tv_title_winner"
            android:gravity="center"
            android:textSize="18sp">
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_palyer1"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>
            <TextView
                android:id="@+id/tv_count_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="0"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_palyer2"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>
            <TextView
                android:id="@+id/tv_count_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="0"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/text_palyer3"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>
            <TextView
                android:id="@+id/tv_count_3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="0"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/text_score">
    </Button>

</LinearLayout>